blog archive last row align fix

--- a/_sass/content/blog-archive.scss
+++ b/_sass/content/blog-archive.scss
@@ -14,6 +14,7 @@
       }
     }
     @include media($break__medium) {
+      margin: 0;
       width: 25%;
       &:nth-child(3n) {
         border-right: 1px solid $hairline;
